# climate_analysis

./: .dockerignore  .gitignore  Dockerfile  environment.yml  pyproject.toml  readme.md  requirements-lambda.txt  requirements.txt
.github/workflows/: terraform.yml
.jupyter/: jupyter_lab_config.py
infra/: .terraform.lock.hcl  main.tf  terraform.tf  variables.tf
k8s/: app-ingress.yaml  deployment.yaml  secret.template.yaml
notebooks/: 01_data_exploration.ipynb  co2_data_exploration.ipynb  co2_retrieval_exploration.ipynb  data_retrieval_exploration.ipynb  eda.ipynb  ml_data_analysis.ipynb  tempanomalies_exploration.ipynb
src/: api.py  config.py  main.py
src/data/: __init__.py  load.py  write.py
src/utils/: location.py
src/visualization/: __init__.py  plotting.py
tests/unit/: test_auto_chunk.py
