[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "climate_analysis"
version = "0.1.0"
description = "Climate Analysis Tool"
authors = [{ name = "Anastasiia Shcherbakova" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio",
    "argon2-cffi",
    "argon2-cffi-bindings",
    "arrow",
    "asttokens",
    "async-lru",
    "attrs",
    "babel",
    "beautifulsoup4",
    "bleach",
    "cartopy",
    "certifi",
    "cffi",
    "cftime",
    "charset-normalizer",
    "colorama",
    "comm",
    "contourpy",
    "cycler",
    "debugpy",
    "decorator",
    "defusedxml",
    "executing",
    "fastjsonschema",
    "fonttools",
    "fqdn",
    "git-filter-repo",
    "h11",
    "h5netcdf",
    "h5py",
    "httpcore",
    "httpx",
    "idna",
    "ipykernel",
    "ipython",
    "ipython-pygments-lexers",
    "ipywidgets",
    "isoduration",
    "jedi",
    "jinja2",
    "joblib",
    "json5",
    "jsonpointer",
    "jsonschema",
    "jsonschema-specifications",
    "jupyter",
    "jupyter-console",
    "jupyter-events",
    "jupyter-lsp",
    "jupyter-client",
    "jupyter-core",
    "jupyter-server",
    "jupyter-server-terminals",
    "jupyterlab",
    "jupyterlab-pygments",
    "jupyterlab-server",
    "jupyterlab-widgets",
    "kiwisolver",
    "lark",
    "markupsafe",
    "matplotlib",
    "matplotlib-inline",
    "mistune",
    "nbclient",
    "nbconvert",
    "nbformat",
    "nest-asyncio",
    "netcdf4",
    "notebook",
    "notebook-shim",
    "numpy",
    "packaging",
    "pandas",
    "pandocfilters",
    "parso",
    "pillow",
    "platformdirs",
    "prometheus-client",
    "prompt-toolkit",
    "psutil",
    "pure-eval",
    "pycparser",
    "pygments",
    "pyparsing",
    "pyproj",
    "pyshp",
    "python-dateutil",
    "python-json-logger",
    "pytz",
    "pywinpty",
    "pyyaml",
    "pyzmq",
    "referencing",
    "requests",
    "rfc3339-validator",
    "rfc3986-validator",
    "rfc3987-syntax",
    "rpds-py",
    "scikit-learn",
    "scipy",
    "send2trash",
    "setuptools",
    "shapely",
    "six",
    "sniffio",
    "soupsieve",
    "stack-data",
    "terminado",
    "threadpoolctl",
    "tinycss2",
    "tornado",
    "traitlets",
    "types-python-dateutil",
    "typing-extensions",
    "tzdata",
    "uri-template",
    "urllib3",
    "wcwidth",
    "webcolors",
    "webencodings",
    "websocket-client",
    "widgetsnbextension",
    "xarray",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy"
]