[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climate_analysis"
version = "0.1.0"
description = "Climate data analysis tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ana-sher" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "dask",
    "rasterio",
    "rioxarray",
    "geopandas",
    "pyproj",
    "shapely",
    "fiona",
    "netcdf4",
    "h5py",
    "matplotlib",
    "seaborn",
    "ipython",
    "jupyterlab",
    "notebook",
    "scikit-learn",
    "cartopy",
    "requests",
    "httpx",
    "python-dotenv",
    "sqlalchemy",
    "alembic",
    "psycopg2",
    "psycopg",
    "s3fs",
    "plotly",
    "pyarrow",
    "scikit-image",
    "scipy",
    "pydantic",
    "zarr",
    "earthaccess>=0.15.0",
    "python-cmr>=0.13.0",
    "pystac>=1.14.0",
    "pystac-client>=0.9.0",
    "whitebox>=2.3.0",
    "whiteboxgui>=2.3.0",
    "aiobotocore==2.25.2",
    "botocore==1.40.70",
    "pydantic-settings",
    "fastapi[standard]",
    "mangum",
    "titiler",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[tool.setuptools.packages.find]
where = ["src"]